results/SVCOMP/specgen/log-bitwise1-2024_02_24_15_31_14.txt
public class bitwise1 {
  static char c;

  //@ requires true;
  //@ ensures \result <==> ((c | 2) & 3) == 3;
  public static boolean fun(int input) {
    c = (char) (input * 2 + 1);
    int i = (c | 2);
    return (i & 3) == 3;
  }
}
/home/max/Documents/JMLGPT/tmp/bitwise1.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> ((c | 2) & 3) == 3;
                             ^
1 error

public class bitwise1 {
  static /*@ spec_public @*/ char c;

  //@ requires true;
  //@ ensures \result <==> ((c | 2) & 3) == 3;
  public static boolean fun(int input) {
    c = (char) (input * 2 + 1);
    int i = (c | 2);
    return (i & 3) == 3;
  }
}

